[package]
name = "wallet-revive"
version = "0.1.0"
authors = ["Martin von Kontsek <@kontsek>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
global_counter = "0.2.1"
bs58 = "0.4.0"
sha2 = "0.9.3"
secp256k1 = { version = "0.20.0", features = ["rand"] }
rand = "0.8.3"
rayon =  "1.5.0"
hex="0.4.3"